Fix drawer title text overflow

--- a/frontend/src/Components/Graph/Graph.sass
+++ b/frontend/src/Components/Graph/Graph.sass
@@ -178,6 +178,7 @@
 
 .rs-drawer-header .rs-drawer-title 
     color: $color-title-font
+    white-space: initial
 
 
 .rs-drawer-body 
